more tracking experiments