@@ -24,8 +24,22 @@ javaOptions in run += "-Djava.library.path=" + Seq({ if (System.getProperty("os.
 
 javaOptions in run += "-Dorg.lwjgl.opengl.Window.undecorated=true"
 
-javaOptions in run += "-XX:+UseConcMarkSweepGC"
-
 // disable sbt's prefix of output when forking: http://stackoverflow.com/questions/14504572/sbt-suppressing-logging-prefix-in-stdout
 outputStrategy in run := Some(StdoutOutput)
+
+
+// --------------------------------
+// Experiments with GC settings
+// --------------------------------
+
+// javaOptions in run += "-XX:+UseParallelGC" // peaks less deterministic, sometimes 3 sec between peaks, but 50 ms frame delta
+
+// javaOptions in run += "-XX:+UseParallelOldGC" // similar to -XX:+UseParallelGC
+
+// javaOptions in run += "-XX:+UseSerialGC" // peaks slightly more frequent that with UseConcMarkSweepGC, but delta mainly below 10 ms
+
+javaOptions in run += "-XX:+UseConcMarkSweepGC" 
+
+javaOptions in run += "-XX:-UseParNewGC"
+
 
